...
        >

        <svenmeier.coxswain.view.preference.EditTextPreference
            android:key="@string/preference_split_distance"
            android:title="@string/preference_split_distance_title"
            android:summary="@string/preference_split_distance_summary"
            android:defaultValue="500"
        />

        <CheckBoxPreference
            android:key="@string/preference_adjust_energy"
            android:title="@string/preference_adjust_energy_title"
            android:summary="@string/preference_adjust_energy_summary"
...
